@@ -3,7 +3,6 @@
  ;; If you edit it by hand, you could mess it up, so be careful.
  ;; Your init file should contain only one such instance.
  ;; If there is more than one, they won't work right.
- '(markdown-command "pandoc")
  '(package-selected-packages
    '(exec-path-from-shell osx-trash org-preview-html markdown-mode)))
 (custom-set-faces
