@@ -10,6 +10,7 @@ Added:
 Changed:
   - Frames default width slightly balanced.
   - Use package exec-path-from-shell to load user's shell environment variables.
+  - markdown-mode: use multimarkdown parser (if available).
 
 Fixed:
   - Minor modes enabling.
